--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -22,8 +22,17 @@ disabled = false
 [directory]
 style = "bg:#1d2230 fg:#a0a9cb"
 format = "[ $path ]($style)"
-truncation_length = 8
+truncation_length = 3
 truncation_symbol = "…/"
+
+[git_branch]
+symbol = ""
+style = "bg:#394260"
+format = '[[ $symbol $branch ](fg:#769ff0 bg:#394260)]($style)'
+
+[git_status]
+style = "bg:#394260"
+format = '[[($all_status$ahead_behind )](fg:#769ff0 bg:#394260)]($style)'
 
 [directory.substitutions]
 "~" = " "
