--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -5,11 +5,12 @@ set $mod Mod4
 exec --no-startup-id nm-applet
 exec --no-startup-id blueman-applet
 exec --no-startup-id ~/.local/bin/check_backup.sh
-exec "setxkbmap -layout us,sk -variant qwerty -option 'grp:alt_shift_toggle'"
+exec --no-startup-id "setxkbmap -layout us,sk -variant qwerty -option 'grp:alt_shift_toggle'"
+exec --no-startup-id i3-auto-layout autolayout
+exec --no-startup-id dunst
 
-exec_always feh --bg-scale ~/Firefox_wallpaper.png
+exec_always --no-startup-id feh --bg-scale ~/Pictures/coffee-cup.jpg
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
-exec_always --no-startup-id i3-auto-layout autolayout
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -28,7 +29,7 @@ gaps inner 5
 gaps top 40
 
 # i3 Keybindings
-bindsym $mod+Return exec "WINIT_X11_SCALE_FACTOR=1.1 alacritty"
+bindsym $mod+Return exec "WINIT_X11_SCALE_FACTOR=1 alacritty"
 bindsym $mod+l exec "i3lock -c 000000 -i /usr/share/endeavouros/backgrounds/endeavouros-wallpaper.png"
 bindsym $mod+q kill
 bindsym $mod+Shift+r restart
@@ -54,8 +55,7 @@ bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 bindsym $mod+Shift+space floating toggle
-bindsym $mod+space focus mode_toggle
-bindsym $mod+a focus parent
+bindsym $mod+space focus mode toggle
 
 mode "resize" {
         bindsym Left resize shrink width 10 px or 10 ppt
@@ -130,5 +130,7 @@ client.urgent           $red $red $white $red $red
 
 # Application keybindings
 bindsym $mod+Ctrl+f workspace $ws2; exec firefox
-bindsym $mod+Ctrl+e workspace $ws3; exec "WINIT_X11_SCALE_FACTOR=1.1 alacritty -e bash -ic 'lf'"
+bindsym $mod+Ctrl+e exec "WINIT_X11_SCALE_FACTOR=1 alacritty --class lf -e bash -ic 'lf'"
+bindsym Ctrl+Shift+Escape exec "WINIT_X11_SCALE_FACTOR=1 alacritty --class btop -e bash -ic 'btop'"
 
+for_window [class="btop"] floating enable, resize set 1200 800, move position center
