--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -132,5 +132,6 @@ client.urgent           $red $red $white $red $red
 bindsym $mod+Ctrl+f workspace $ws2; exec firefox
 bindsym $mod+Ctrl+e exec "WINIT_X11_SCALE_FACTOR=1 alacritty --class lf -e bash -ic 'lf'"
 bindsym Ctrl+Shift+Escape exec "WINIT_X11_SCALE_FACTOR=1 alacritty --class btop -e bash -ic 'btop'"
+bindsym $mod+Ctrl+c exec rofi-config
 
 for_window [class="btop"] floating enable, resize set 1200 800, move position center
