--- a/i3/.config/polybar/config.ini
+++ b/i3/.config/polybar/config.ini
@@ -54,7 +54,7 @@ font-0 = "JetBrainsMono Nerd Font:size=13;2"
 module-margin = 1
 modules-left = i3 xwindow
 modules-center = date
-modules-right = pulseaudio cpu xkeyboard systray
+modules-right = pulseaudio cpu xkeyboard battery systray
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -143,7 +143,9 @@ interval = 25
 
 mount-0 = /
 
-label-mounted = %{F#D79921}%mountpoint%%{F-} %free%
+label-mounted-prefix  = 󰋊 
+label-mounted-prefix-foreground = ${colors.primary}
+label-mounted = %free%
 
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
@@ -208,7 +210,37 @@ type = internal/date
 interval = 1
 
 date-alt = %H:%M
-date = %d.%m.%Y    %H:%M
+date =  %d.%m.%Y    %H:%M
 
 label = %date%
 label-foreground = ${colors.primary}
+
+[module/battery]
+type = internal/battery
+battery = BAT0
+adapter = AC
+
+format-charging = <animation-charging>  <label-charging>
+format-discharging = <ramp-capacity>  <label-discharging>
+format-full = <ramp-capacity>  <label-full>
+
+label-charging = %percentage%%
+label-discharging = %percentage%%
+label-full = %percentage%%
+
+ramp-capacity-0 =  
+ramp-capacity-0-foreground = ${colors.alert}
+ramp-capacity-1 =  
+ramp-capacity-2 =  
+ramp-capacity-3 =  
+ramp-capacity-4 =  
+ramp-capacity-foreground = ${colors.primary}
+
+animation-charging-0 =  
+animation-charging-1 =  
+animation-charging-2 =  
+animation-charging-3 =  
+animation-charging-4 =  
+animation-charging-foreground = ${colors.primary}
+animation-charging-framerate = 750
+
