--- a/i3/.config/polybar/config.ini
+++ b/i3/.config/polybar/config.ini
@@ -21,13 +21,21 @@ screenchange-reload = true
 pseudo-transparency = true
 
 [colors]
-background = #282A2E
-background-alt = #373B41
-foreground = #C5C8C6
-primary = #D79921
-secondary = #8ABEB7
-alert = #A54242
-disabled = #707880
+background = ${xrdb:color0:#222}
+foreground = ${xrdb:color7:#222}
+background-alt = ${xrdb:color0:#222}
+primary = ${xrdb:color2:#222}
+secondary = ${xrdb:color2:#222}
+alert = ${xrdb:color3:#222}
+disabled = ${xrdb:color8:#222}
+
+#background = #282A2E
+#background-alt = #373B41
+#foreground = #C5C8C6
+#primary = #D79921
+#secondary = #8ABEB7
+#alert = #A54242
+#disabled = #707880
 
 [bar/bar1]
 width = 99%
