--- a/i3/.config/polybar/config.ini
+++ b/i3/.config/polybar/config.ini
@@ -21,9 +21,11 @@ screenchange-reload = true
 pseudo-transparency = true
 
 [colors]
+#For pywal:
 background = ${xrdb:color0:#222}
 foreground = ${xrdb:color7:#222}
-background-alt = ${xrdb:color0:#222}
+#background-alt = ${xrdb:color0:#222}
+background-alt = #373B41
 primary = ${xrdb:color2:#222}
 secondary = ${xrdb:color2:#222}
 alert = ${xrdb:color3:#222}
