--- a/i3/.config/picom/picom.conf
+++ b/i3/.config/picom/picom.conf
@@ -137,6 +137,8 @@ active-opacity = 1;
 opacity-rule = [
     "95:class_g = 'Alacritty' && focused",
     "50:class_g = 'Alacritty' && !focused",
+    "95:class_g = 'kitty' && focused",
+    "50:class_g = 'kitty' && !focused",
     "95:class_g = 'btop'"
 ]
 
