--- a/i3/.config/polybar/config.ini
+++ b/i3/.config/polybar/config.ini
@@ -145,7 +145,7 @@ label-empty-padding = 1
 [module/xwindow]
 type = internal/xwindow
 #label = %title:0:60:...%
-label = %class%
+label = %instance%
 
 [module/filesystem]
 type = internal/fs
