--- a/i3/.config/polybar/config.ini
+++ b/i3/.config/polybar/config.ini
@@ -64,7 +64,7 @@ font-0 = "JetBrainsMono Nerd Font:size=13;2"
 module-margin = 1
 modules-left = i3 xwindow
 modules-center = date
-modules-right = pulseaudio cpu xkeyboard battery systray
+modules-right = filesystem pulseaudio cpu xkeyboard battery systray
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -115,7 +115,7 @@ label-visible-background = ${colors.background}
 label-visible-foreground = ${colors.foreground}
 label-visible-padding = 1
 
-label-urgent = %icon% 
+label-urgent = %index%:%icon% 
 label-urgent-background = ${self.label-focused-background}
 label-urgent-foreground = ${colors.alert}
 label-urgent-padding = 1
@@ -153,8 +153,9 @@ interval = 25
 
 mount-0 = /
 
-label-mounted-prefix  = 󰋊 
-label-mounted-prefix-foreground = ${colors.primary}
+format-mounted = <label-mounted>
+format-mounted-prefix  = "  "
+format-mounted-prefix-foreground = ${colors.primary}
 label-mounted = %free%
 
 label-unmounted = %mountpoint% not mounted
