--- a/yazi/.config/yazi/keymap.toml
+++ b/yazi/.config/yazi/keymap.toml
@@ -83,6 +83,7 @@ keymap = [
 	{ on = [ "S" ],         run = "search rg",                  desc = "Search files by content using ripgrep" },
 	{ on = [ "<C-s>" ],     run = "search none",                desc = "Cancel the ongoing search" },
 	{ on = [ "/" ],         run = "plugin fzf",                 desc = "Jump to a directory, or reveal a file using fzf" },
+	{ on = [ "i" ],         run = "shell --confirm --block 'bat $1'",       desc = "View content of file" },
 
 	# Linemode
 	{ on = [ "m", "s" ], run = "linemode size",        desc = "Set linemode to size" },
