--- a/i3/.config/polybar/config.ini
+++ b/i3/.config/polybar/config.ini
@@ -64,7 +64,7 @@ font-0 = "JetBrainsMono Nerd Font:size=13;2"
 module-margin = 1
 modules-left = i3 xwindow
 modules-center = date
-modules-right = filesystem pulseaudio cpu xkeyboard battery systray
+modules-right = filesystem pulseaudio cpu xkeyboard battery systray powermenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -255,3 +255,7 @@ animation-charging-4 = 
 animation-charging-foreground = ${colors.primary}
 animation-charging-framerate = 750
 
+[module/powermenu]
+type = custom/script
+exec = echo "%{A1:rofi-power:}⏻ %{A}"
+label-foreground = ${colors.primary}
