--- a/i3/.config/polybar/config.ini
+++ b/i3/.config/polybar/config.ini
@@ -52,6 +52,8 @@ background = ${colors.background}
 foreground = ${colors.foreground}
 
 line-size = 3pt
+border-size = 0pt
+border-color = ${colors.primary}
 
 padding-left = 1
 padding-right = 1
@@ -60,9 +62,10 @@ separator = |
 separator-foreground = ${colors.disabled}
 
 font-0 = "JetBrainsMono Nerd Font:size=13;2"
+font-1 = "JetBrainsMono Nerd Font:size=16;2"
 
 module-margin = 1
-modules-left = i3 xwindow
+modules-left = i3
 modules-center = date
 modules-right = filesystem pulseaudio cpu xkeyboard battery systray powermenu
 
@@ -85,11 +88,21 @@ type = internal/i3
 show-urgent = true
 index-sort = true
 
-ws-icon-0 = 1;
-ws-icon-1 = 2;󰖟
-ws-icon-2 = 3;
-ws-icon-3 = 4;󰍹
-ws-icon-4 = 5;󰍹
+#ws-icon-0 = 1;
+#ws-icon-1 = 2;󰖟
+#ws-icon-2 = 3;
+#ws-icon-3 = 4;󰍹
+#ws-icon-4 = 5;󰍹
+ws-icon-0 = 1;󰎤
+ws-icon-1 = 2;󰎧
+ws-icon-2 = 3;󰎪
+ws-icon-3 = 4;󰎭
+ws-icon-4 = 5;󰎱
+ws-icon-5 = 6;󰎳
+ws-icon-6 = 7;󰎶
+ws-icon-7 = 8;󰎹
+ws-icon-8 = 9;󰎼
+ws-icon-9 = 10;󰽽
 ws-icon-default = 󰍹
 
 format = <label-state> <label-mode>
@@ -99,13 +112,13 @@ label-mode-padding = 0
 label-mode-foreground = ${colors.foreground}
 label-mode-background = ${colors.background}
 
-label-focused = %index%:%icon% 
-label-focused-background = ${colors.background-alt}
-label-focused-foreground = ${colors.foreground}
-label-focused-underline = ${colors.primary}
+label-focused = %icon% 
+label-focused-background = ${colors.background}
+label-focused-foreground = ${colors.primary}
+label-focused-font = 2
 label-focused-padding = 1
 
-label-unfocused = %index%:%icon%
+label-unfocused = %icon%
 label-unfocused-background = ${colors.background}
 label-unfocused-foreground = ${colors.disabled}
 label-unfocused-padding = 1
@@ -115,8 +128,8 @@ label-visible-background = ${colors.background}
 label-visible-foreground = ${colors.foreground}
 label-visible-padding = 1
 
-label-urgent = %index%:%icon% 
-label-urgent-background = ${self.label-focused-background}
+label-urgent = %icon% 
+label-urgent-background = ${colors.background}
 label-urgent-foreground = ${colors.alert}
 label-urgent-padding = 1
 
@@ -176,6 +189,7 @@ label-muted-foreground = ${colors.disabled}
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
+blacklist-1 = caps lock
 
 label-layout = %layout%
 label-layout-foreground = ${colors.primary}
