--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -5,7 +5,7 @@ set $mod Mod4
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id nm-applet
 exec --no-startup-id blueman-applet
-exec --no-startup-id "setxkbmap -layout us,sk -variant qwerty -option 'grp:alt_shift_toggle'"
+exec --no-startup-id "setxkbmap -layout us,sk -variant ,qwerty -option 'grp:alt_shift_toggle'"
 exec --no-startup-id i3-auto-layout autolayout
 exec --no-startup-id dunst
 exec --no-startup-id picom -b
