--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -8,7 +8,7 @@ include ~/.cache/wal/colors-kitty.conf
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      JetBrainsMono Nerd Font
+font_family      JetBrains Mono
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
