--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -6,13 +6,14 @@ fullscreen=yes
 save-position-on-quit=yes
 
 #Video settings
-profile=high-quality
+profile=gpu-hq
 #video-sync=display-resample
 #interpolation=yes
 #tscale=oversample
 
 #Audio
 volume-max=130
+af=format=channels=stereo,loudnorm
 
 #Subtitles
 sub-codepage=cp1250
