--- a/i3/.config/polybar/config.ini
+++ b/i3/.config/polybar/config.ini
@@ -20,24 +20,20 @@
 screenchange-reload = true
 pseudo-transparency = true
 
-[colors]
-#For pywal:
-background = ${xrdb:color0:#222}
-foreground = ${xrdb:color15:#222}
-#background-alt = ${xrdb:color0:#222}
-background-alt = #373B41
-primary = ${xrdb:color3:#222}
-secondary = ${xrdb:color2:#222}
-alert = ${xrdb:color3:#222}
-disabled = ${xrdb:color8:#222}
 
-#background = #282A2E
+include-file = $HOME/.config/polybar/mocha.ini
+
+#[colors]
+##For pywal:
+#background = ${xrdb:color0:#222}
+#foreground = ${xrdb:color15:#222}
+##background-alt = ${xrdb:color0:#222}
 #background-alt = #373B41
-#foreground = #C5C8C6
-#primary = #D79921
-#secondary = #8ABEB7
-#alert = #A54242
-#disabled = #707880
+#primary = ${xrdb:color3:#222}
+#secondary = ${xrdb:color2:#222}
+#alert = ${xrdb:color3:#222}
+#disabled = ${xrdb:color8:#222}
+
 
 [bar/bar1]
 width = 99%
