--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -117,7 +117,7 @@ bindsym $mod+Ctrl+Left workspace prev
 #set_from_resource $fg i3wm.color3 #f0f0f0
 #set_from_resource $bg i3wm.color0 #f0f0f0
 
-set $fg #f9e2af
+set $fg #b4befe
 set $bg #1e1e2e
 
 # class                 border  backgr. text indicator child_border
