--- a/i3/.config/polybar/mocha.ini
+++ b/i3/.config/polybar/mocha.ini
@@ -32,8 +32,8 @@
  crust = #11111b
  transparent = #FF00000
 
-background = ${colors.base}
-foreground = ${colors.mauve}
-primary = ${colors.yellow}
-disabled = ${colors.lavender}
+ background = ${colors.base}
+ foreground = ${colors.blue}
+ primary = ${colors.peach}
+ disabled = ${colors.text}
 
