--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -1,42 +1,67 @@
+palette = 'catppuccin_mocha'
+
 format = """
 $username\
-[](bg:#769ff0 fg:#a3aed2)\
+[](bg:lavender fg:blue)\
 $hostname\
-[](fg:#769ff0 bg:#212736)\
+[](fg:lavender bg:flamingo)\
 $directory\
-[ ](fg:#1d2230)\
+[ ](fg:flamingo)\
 $character"""
+
+[palettes.catppuccin_mocha]
+rosewater = "#f5e0dc"
+flamingo = "#f2cdcd"
+pink = "#f5c2e7"
+mauve = "#cba6f7"
+red = "#f38ba8"
+maroon = "#eba0ac"
+peach = "#fab387"
+yellow = "#f9e2af"
+green = "#a6e3a1"
+teal = "#94e2d5"
+sky = "#89dceb"
+sapphire = "#74c7ec"
+blue = "#89b4fa"
+lavender = "#b4befe"
+text = "#cdd6f4"
+subtext1 = "#bac2de"
+subtext0 = "#a6adc8"
+overlay2 = "#9399b2"
+overlay1 = "#7f849c"
+overlay0 = "#6c7086"
+surface2 = "#585b70"
+surface1 = "#45475a"
+surface0 = "#313244"
+base = "#1e1e2e"
+mantle = "#181825"
+crust = "#11111b"
 
 [username]
 show_always = true
-style_user = "bg:#a3aed2 fg:#090c0c"
+style_user = "bg:blue fg:base"
 format = '[ $user]($style)'
 disabled = false
 
 [hostname]
 ssh_only = false
-format = '[$ssh_symbol](bold blue)[ $hostname](fg:#090c0c bg:#769ff0)'
+format = '[$ssh_symbol](bold blue)[ $hostname](fg:base bg:lavender)'
 disabled = false
 
 [directory]
-style = "bg:#1d2230 fg:#a0a9cb"
+style = "bg:flamingo fg:base"
 format = "[ $path ]($style)"
 truncation_length = 3
 truncation_symbol = "…/"
 
-[git_branch]
-symbol = ""
-style = "bg:#394260"
-format = '[[ $symbol $branch ](fg:#769ff0 bg:#394260)]($style)'
-
-[git_status]
-style = "bg:#394260"
-format = '[[($all_status$ahead_behind )](fg:#769ff0 bg:#394260)]($style)'
-
 [directory.substitutions]
 "~" = " "
-#"Documents" = " "
+#"Documents" = "🗎 "
 #"Downloads" = " "
 #"Music" = " "
 #"Pictures" = " "
 
+[character]
+disabled = false
+success_symbol = '[](bold fg:green)'
+error_symbol = '[](bold fg:red)'
