--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -1,6 +1,7 @@
 palette = 'catppuccin_mocha'
 
 format = """
+[](blue)\
 $username\
 [](bg:lavender fg:blue)\
 $hostname\
@@ -37,19 +38,29 @@ base = "#1e1e2e"
 mantle = "#181825"
 crust = "#11111b"
 
+[os]
+disabled = false
+style = "bg:blue fg:surface0"
+
+[os.symbols]
+Mint = "󰣭 "
+Linux = "󰌽 "
+Arch = "󰣇 "
+EndeavourOS = " "
+
 [username]
 show_always = true
-style_user = "bg:blue fg:base"
+style_user = "bg:blue fg:surface0"
 format = '[ $user]($style)'
 disabled = false
 
 [hostname]
 ssh_only = false
-format = '[$ssh_symbol](bold blue)[ $hostname](fg:base bg:lavender)'
+format = '[$ssh_symbol](bold blue)[ $hostname](fg:surface0 bg:lavender)'
 disabled = false
 
 [directory]
-style = "bg:peach fg:base"
+style = "bg:peach fg:surface0"
 format = "[ $path ]($style)"
 truncation_length = 3
 truncation_symbol = "…/"
