--- a/i3/.config/polybar/mocha.ini
+++ b/i3/.config/polybar/mocha.ini
@@ -33,7 +33,7 @@
  transparent = #FF00000
 
  background = ${colors.base}
- foreground = ${colors.blue}
+ foreground = ${colors.lavender}
  primary = ${colors.peach}
  disabled = ${colors.text}
 
