--- a/i3/.config/polybar/config.ini
+++ b/i3/.config/polybar/config.ini
@@ -19,6 +19,7 @@
 [settings]
 screenchange-reload = true
 pseudo-transparency = true
+format-padding = 0.5
 
 include-file = $HOME/.config/polybar/mocha.ini
 
@@ -53,15 +54,15 @@ border-color = ${colors.primary}
 padding-left = 1
 padding-right = 1
 
-separator = |
-separator-foreground = ${colors.disabled}
+#separator =  
+#separator-foreground = ${colors.disabled}
 
 font-0 = "JetBrainsMono Nerd Font:size=13;2"
 font-1 = "JetBrainsMono Nerd Font:size=18;4"
 
 module-margin = 1
-modules-left = i3
-modules-center = date
+modules-left = date time
+modules-center = i3
 modules-right = filesystem pulseaudio cpu xkeyboard battery systray powermenu
 
 cursor-click = pointer
@@ -138,7 +139,7 @@ interval = 25
 mount-0 = /
 
 format-mounted = <label-mounted>
-format-mounted-prefix  = "  "
+format-mounted-prefix  = " "
 format-mounted-prefix-foreground = ${colors.primary}
 label-mounted = %free%
 
@@ -154,21 +155,16 @@ format-volume = <label-volume>
 
 label-volume = %percentage%%
 
-label-muted =   0% 
+label-muted =    0% 
 label-muted-foreground = ${colors.disabled}
 
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
 blacklist-1 = caps lock
-
 label-layout = %layout%
-label-layout-foreground = ${colors.primary}
-
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-foreground = ${colors.background}
-label-indicator-background = ${colors.secondary}
+format-prefix = "  "
+format-prefix-foreground = ${colors.primary}
 
 [module/cpu]
 type = internal/cpu
@@ -179,13 +175,19 @@ label = %percentage:2%%
 
 [module/date]
 type = internal/date
-interval = 1
-
-date-alt = %H:%M
-date =  %d.%m.%Y    %H:%M
-
+interval = 60
+date = %e.%b
 label = %date%
-label-foreground = ${colors.primary}
+format-prefix-foreground = ${colors.primary}
+format-prefix = " "
+
+[module/time]
+type = internal/date
+interval = 1
+date = %H:%M
+label = %date%
+format-prefix-foreground = ${colors.primary}
+format-prefix = "   "
 
 [module/battery]
 type = internal/battery
@@ -200,19 +202,19 @@ label-charging = %percentage%%
 label-discharging = %percentage%%
 label-full = %percentage%%
 
-ramp-capacity-0 =  
+ramp-capacity-0 = 
 ramp-capacity-0-foreground = ${colors.alert}
-ramp-capacity-1 =  
-ramp-capacity-2 =  
-ramp-capacity-3 =  
-ramp-capacity-4 =  
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
 ramp-capacity-foreground = ${colors.primary}
 
-animation-charging-0 =  
-animation-charging-1 =  
-animation-charging-2 =  
-animation-charging-3 =  
-animation-charging-4 =  
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
 animation-charging-foreground = ${colors.primary}
 animation-charging-framerate = 750
 
