--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -11,8 +11,6 @@ exec --no-startup-id dunst
 exec --no-startup-id picom -b
 exec --no-startup-id ~/.local/bin/check_backup.sh
 
-#exec_always --no-startup-id wal -R
-#exec_always --no-startup-id feh --bg-fill "$(< "${HOME}/.cache/wal/wal")"
 exec_always --no-startup-id $HOME/.fehbg
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
@@ -29,6 +27,7 @@ floating_modifier $mod
 tiling_drag modifier titlebar
 default_border pixel 2
 hide_edge_borders smart
+focus_on_window_activation focus
 gaps inner 5
 gaps top 40
 
@@ -59,7 +58,7 @@ bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 bindsym $mod+Shift+space floating toggle
-bindsym $mod+space focus mode toggle
+# bindsym $mod+space focus mode toggle
 
 mode "resize" {
         bindsym Left resize shrink width 10 px or 10 ppt
