--- a/yazi/.config/yazi/keymap.toml
+++ b/yazi/.config/yazi/keymap.toml
@@ -85,11 +85,9 @@ keymap = [
 	{ on = [ "/" ],         run = "plugin fzf",                 desc = "Jump to a directory, or reveal a file using fzf" },
 	{ on = [ "i" ],         run = "shell --confirm --block 'bat $1'",       desc = "View content of file" },
 
-	# Linemode
-	{ on = [ "m", "s" ], run = "linemode size",        desc = "Set linemode to size" },
-	{ on = [ "m", "p" ], run = "linemode permissions", desc = "Set linemode to permissions" },
-	{ on = [ "m", "m" ], run = "linemode mtime",       desc = "Set linemode to mtime" },
-	{ on = [ "m", "n" ], run = "linemode none",        desc = "Set linemode to none" },
+	# Mounts
+	{ on = [ "m", "m" ], run = "shell --confirm 'mount /media/NAS/Media'",         desc = "Mount NAS/Media" },
+	{ on = [ "m", "M" ], run = "shell --confirm 'umount /media/NAS/Media'",        desc = "Unmount NAS/Media" },
 
 	# Copy
 	{ on = [ "c", "c" ], run = "copy path",             desc = "Copy the absolute path" },
