--- a/yazi/.config/yazi/yazi.toml
+++ b/yazi/.config/yazi/yazi.toml
@@ -26,7 +26,7 @@ ueberzug_offset = [ 0, 0, 0, 0 ]
 
 [opener]
 text = [
-	{ run = 'kitty ${EDITOR:=vim} "$@"', desc = "Edit", block = false, for = "unix" },
+	{ run = 'kitty ${EDITOR:=vim} "$@"', desc = "Edit", orphan = true, for = "unix" },
 	{ run = 'bat "$1"', desc = "View", block = true, for = "unix" },
 ]
 open = [
