--- a/yazi/.config/yazi/yazi.toml
+++ b/yazi/.config/yazi/yazi.toml
@@ -45,6 +45,9 @@ wallpaper = [
 extract = [
 	{ run = 'unar "$1"', desc = "Extract here", for = "unix" },
 ]
+ebook = [
+	{ run = 'kitty epy "$1"', desc = "Read e-book", orphan = true, for = "unix" },
+]
 play = [
 	{ run = 'mpv "$@"', orphan = true, for = "unix" },
 ]
@@ -59,6 +62,7 @@ rules = [
 	{ mime = "{audio,video}/*", use = [ "play", "info", "reveal" ] },
 	{ mime = "inode/x-empty",   use = [ "text", "reveal" ] },
 
+	{ mime = "application/epub+zip",          use = [ "ebook", "open", "extract", "reveal" ] },
 	{ mime = "application/*zip", use = [ "extract", "reveal" ] },
 	{ mime = "application/x-{tar,bzip*,7z-compressed,xz,rar}", use = [ "extract", "reveal" ] },
 
