--- a/i3/.config/polybar/config.ini
+++ b/i3/.config/polybar/config.ini
@@ -61,8 +61,8 @@ font-0 = "JetBrainsMono Nerd Font:size=13;2"
 font-1 = "JetBrainsMono Nerd Font:size=18;4"
 
 module-margin = 1
-modules-left = date time
-modules-center = i3
+modules-left = i3 
+modules-center = date time
 modules-right = filesystem pulseaudio cpu xkeyboard battery systray powermenu
 
 cursor-click = pointer
