--- a/yazi/.config/yazi/yazi.toml
+++ b/yazi/.config/yazi/yazi.toml
@@ -62,7 +62,7 @@ rules = [
 	{ mime = "{audio,video}/*", use = [ "play", "info", "reveal" ] },
 	{ mime = "inode/x-empty",   use = [ "text", "reveal" ] },
 
-	{ mime = "application/epub+zip",          use = [ "ebook", "open", "extract", "reveal" ] },
+	{ name = "*.epub",           use = [ "ebook", "open", "extract", "reveal" ] },
 	{ mime = "application/*zip", use = [ "extract", "reveal" ] },
 	{ mime = "application/x-{tar,bzip*,7z-compressed,xz,rar}", use = [ "extract", "reveal" ] },
 
