--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -127,6 +127,7 @@ client.urgent           $bg     $bg     $fg  $bg       $bg
 
 # Application keybindings
 bindsym $mod+Ctrl+f workspace $ws2; exec firefox
+bindsym $mod+Ctrl+e workspace $ws3; exec pcmanfm
 bindsym Ctrl+Shift+Escape exec "kitty --app-id btop btop"
 bindsym $mod+period exec --no-startup-id rofi-config
 bindsym $mod+m exec --no-startup-id rofi-mount
