--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -2,6 +2,7 @@ set $mod Mod4
 
 # Startup
 # exec --no-startup-id xrandr -s 1920x1080
+exec --no-startup-id xdg-user-dirs-gtk-update
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork -c 000000 -i /usr/share/endeavouros/backgrounds/endeavouros-wallpaper.png
 exec --no-startup-id nm-applet
 exec --no-startup-id blueman-applet
