--- a/i3/.config/polybar/config.ini
+++ b/i3/.config/polybar/config.ini
@@ -158,6 +158,8 @@ label-volume = %percentage%%
 label-muted =    0% 
 label-muted-foreground = ${colors.disabled}
 
+click-right = pavucontrol
+
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
