--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -14,10 +14,12 @@ profile=gpu-hq
 #Audio
 volume-max=130
 af=format=channels=stereo,loudnorm
+alang=eng
 
 #Subtitles
 sub-codepage=cp1250
 sub-font='Ubuntu'
+slang=cze,ces,slo,slk
 
 #OSD
 osd-duration=2000
