--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -6,6 +6,7 @@ exec --no-startup-id xdg-user-dirs-gtk-update
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork -c 000000 -i /usr/share/endeavouros/backgrounds/endeavouros-wallpaper.png
 exec --no-startup-id nm-applet
 exec --no-startup-id blueman-applet
+exec --no-startup-id udiskie --no-config --smart-tray --file-manager=pcmanfm
 exec --no-startup-id "setxkbmap -layout us,sk -variant ,qwerty -option 'grp:alt_shift_toggle'"
 exec --no-startup-id i3-auto-layout autolayout
 exec --no-startup-id dunst
@@ -37,7 +38,7 @@ bindsym $mod+Return exec "kitty"
 bindsym $mod+l exec "i3lock -c 000000 -i /usr/share/endeavouros/backgrounds/endeavouros-wallpaper.png"
 bindsym $mod+q kill
 bindsym $mod+Shift+r restart
-bindsym $mod+Shift+Return exec --no-startup-id "rofi -show drun"
+bindsym $mod+space exec --no-startup-id "rofi -show drun"
 bindsym $mod+Shift+q exec --no-startup-id rofi-power
 
 # Window manipulation
@@ -59,7 +60,6 @@ bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 bindsym $mod+Shift+space floating toggle
-# bindsym $mod+space focus mode toggle
 
 mode "resize" {
         bindsym Left resize shrink width 10 px or 10 ppt
