--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -2,6 +2,7 @@ set $mod Mod4
 
 # Startup
 # exec --no-startup-id xrandr -s 1920x1080
+exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec --no-startup-id xdg-user-dirs-gtk-update
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork -c 000000 -i /usr/share/endeavouros/backgrounds/endeavouros-wallpaper.png
 exec --no-startup-id nm-applet
@@ -17,11 +18,10 @@ exec_always --no-startup-id $HOME/.fehbg
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 # Use pactl to adjust volume in PulseAudio.
-set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% 
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% 
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle 
+bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle 
 
 # i3 Options
 font pango:JetBrainsMono Nerd Font 13
@@ -38,7 +38,7 @@ bindsym $mod+Return exec "kitty"
 bindsym $mod+l exec "i3lock -c 000000 -i /usr/share/endeavouros/backgrounds/endeavouros-wallpaper.png"
 bindsym $mod+q kill
 bindsym $mod+Shift+r restart
-bindsym $mod+space exec --no-startup-id "rofi -show drun"
+bindsym $mod+Shift+Return exec --no-startup-id "rofi -show drun"
 bindsym $mod+Shift+q exec --no-startup-id rofi-power
 
 # Window manipulation
@@ -51,6 +51,11 @@ bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
+
+bindsym $mod+Ctrl+Left resize shrink width 20
+bindsym $mod+Ctrl+Down resize grow height 20
+bindsym $mod+Ctrl+Up resize shrink height 20
+bindsym $mod+Ctrl+Right resize grow width 20
 
 bindsym $mod+h split h
 bindsym $mod+v split v
@@ -110,8 +115,8 @@ bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
 bindsym $mod+Tab workspace back_and_forth
-bindsym $mod+Ctrl+Right workspace next
-bindsym $mod+Ctrl+Left workspace prev 
+#bindsym $mod+Ctrl+Right workspace next
+#bindsym $mod+Ctrl+Left workspace prev 
 
 # Color scheme
 #set_from_resource $fg i3wm.color3 #f0f0f0
@@ -132,7 +137,11 @@ bindsym $mod+Ctrl+e workspace $ws3; exec pcmanfm
 bindsym Ctrl+Shift+Escape exec "kitty --app-id btop btop"
 bindsym $mod+period exec --no-startup-id rofi-config
 bindsym $mod+m exec --no-startup-id rofi-mount
+bindsym Print exec --no-startup-id maim | tee ~/Pictures/screen_$(date +%F_%H-%M-%S).png | xclip -selection clipboard -t image/png && notify-send "Screenshot saved"
+bindsym Shift+Print exec --no-startup-id maim -s -b 3 | tee ~/Pictures/screen_$(date +%F_%H-%M-%S).png | xclip -selection clipboard -t image/png && notify-send "Screenshot saved"
 
+
+# Window rules
 for_window [class="btop"] floating enable, resize set 1200 800, move position center
 for_window [class=".*alculator"] floating enable
 
