--- a/i3/.config/polybar/config.ini
+++ b/i3/.config/polybar/config.ini
@@ -61,7 +61,7 @@ font-0 = "JetBrainsMono Nerd Font:size=13;2"
 font-1 = "JetBrainsMono Nerd Font:size=18;4"
 
 module-margin = 1
-modules-left = i3 
+modules-left = appmenu i3 
 modules-center = date time
 modules-right = filesystem pulseaudio cpu xkeyboard battery systray powermenu
 
@@ -219,6 +219,12 @@ animation-charging-3 = 
 animation-charging-4 = 
 animation-charging-foreground = ${colors.primary}
 animation-charging-framerate = 750
+
+[module/appmenu]
+type = custom/script
+exec = echo "%{A1:rofi -show drun:} %{A}"
+label-foreground = ${colors.primary}
+label-font = 1
 
 [module/powermenu]
 type = custom/script
