--- a/yazi/.config/yazi/yazi.toml
+++ b/yazi/.config/yazi/yazi.toml
@@ -40,5 +40,6 @@ prepend_rules = [
 
 [plugin]
 prepend_fetchers = [
+	# Mimetype
 	{ id = "mime", name = "*", run = "mime-ext", if = "!(mime|dummy)", prio = "high" },
 ]
