--- a/yazi/.config/yazi/yazi.toml
+++ b/yazi/.config/yazi/yazi.toml
@@ -6,6 +6,7 @@ sort_by        = "extension"
 wrap            = "yes"
 max_width       = 800
 max_height      = 900
+cache_dir       = "~/.cache/yazi/"
 
 [opener]
 edit = [
