--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -114,8 +114,10 @@ client.urgent           $bg     $bg     $fg  $bg       $bg
 
 # Application keybindings
 bindsym $mod+Ctrl+f workspace $ws2; exec firefox
+bindsym $mod+Ctrl+b workspace $ws2; exec brave
 bindsym $mod+Ctrl+e workspace $ws3; exec pcmanfm
 bindsym Ctrl+Shift+Escape exec "kitty --app-id btop btop"
+bindsym $mod+Escape exec "kitty --app-id btop btop"
 bindsym $mod+period exec --no-startup-id rofi-config
 bindsym $mod+m exec --no-startup-id rofi-mount
 bindsym Print exec --no-startup-id maim | tee ~/Pictures/screen_$(date +%F_%H-%M-%S).png | xclip -selection clipboard -t image/png && notify-send "Screenshot saved"
