--- a/sway/.config/fuzzel/fuzzel.ini
+++ b/sway/.config/fuzzel/fuzzel.ini
@@ -1,6 +1,10 @@
 include=~/.config/fuzzel/catppuccin-mocha/lavender.ini
 font=JetBrainsMono Nerd Font:size=8
+use-bold=yes
 icon-theme=Papirus-Dark
 lines=10
 width=50
 line-height=20
+
+[border]
+width=3
