--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -20,6 +20,8 @@ exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec xdg-user-dirs-gtk-update
 exec autotiling
 exec /usr/share/sway-contrib/inactive-windows-transparency.py
+exec fnott
+exec ~/.local/bin/check_backup.sh
 
 ### Idle configuration
 #
@@ -35,7 +37,7 @@ exec /usr/share/sway-contrib/inactive-windows-transparency.py
 # resumed. It will also lock your screen before your computer goes to sleep.
 
 # Sway options
-default_border pixel 2
+default_border pixel 3
 gaps inner 5
 hide_edge_borders smart
 focus_on_window_activation focus
@@ -47,8 +49,7 @@ bindsym $mod+q kill
 bindsym $mod+Shift+Return exec $menu
 bindsym $mod+Shift+r reload
 bindsym $mod+Shift+q exec fuzzel-power
-bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
-#
+
 # Window manipulation
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
@@ -112,7 +113,6 @@ bindsym --locked XF86MonBrightnessUp exec brightnessctl set 5%+
 # Color scheme
 set $fg #b4befe
 set $bg #1e1e2e
-
 # class                 border  backgr. text indicator child_border
 client.focused          $fg     $fg     $bg  $fg       $fg
 client.focused_inactive $bg     $bg     $fg  $bg       $bg
@@ -122,27 +122,22 @@ client.urgent           $bg     $bg     $fg  $bg       $bg
 # Application keybindings
 bindsym $mod+Ctrl+b workspace 2; exec brave
 bindsym $mod+Ctrl+e workspace 3; exec pcmanfm
+bindsym $mod+period exec fuzzel-config
+bindsym $mod+Escape exec "foot --app-id btop btop"
 
 # Window rules
 for_window [app_id="btop"] floating enable, resize set 1200 800, move position center
 for_window [app_id=".*alculator"] floating enable
-for_window [app_id="foot"] opacity 0.95
+#for_window [app_id="foot"] opacity 0.95
+
+# Start Yazi in scratchpad
+for_window [app_id="yazi"] border none, move scratchpad
+bindsym $mod+slash [app_id="yazi"] scratchpad show, resize set 1500 800, move position center
+exec "foot --app-id yazi bash -ic 'yazi'"
 
 # Status Bar:
-#
-# Read `man 5 sway-bar` for more information about this section.
 bar {
-    position top
-
-    # When the status_command prints a new line to stdout, swaybar updates.
-    # The default just shows the current date and time.
-    status_command while date +'%Y-%m-%d %X'; do sleep 1; done
-
-    colors {
-        statusline #ffffff
-        background #323232
-        inactive_workspace #32323200 #32323200 #5c5c5c
-    }
+    swaybar_command waybar
 }
 
 include /etc/sway/config.d/*
