--- a/yazi/.config/yazi/keymap.toml
+++ b/yazi/.config/yazi/keymap.toml
@@ -5,6 +5,7 @@ prepend_keymap = [
 	{ on = "<Delete>",  run = "remove",                      desc = "Trash selected files" },
 	{ on = "/",         run = "plugin fzf",                  desc = "Jump to a directory or reveal a file using fzf" },
 	{ on = "i",         run = "shell --block 'bat \"$1\"'",       desc = "View content of file" },
+	{ on = "M",         run = "plugin mount",                desc = "Mount manager" },
 
 	# Goto
 	{ on = [ "g", "m" ],       run = "cd /media/NAS/Media", desc = "Go to the NAS mount" },
