--- a/sway/.config/fnott/fnott.ini
+++ b/sway/.config/fnott/fnott.ini
@@ -12,9 +12,10 @@ summary-font=JetBrainsMono Nerd Font:size=13
 body-font=JetBrainsMono Nerd Font:size=13
 
 default-timeout=5
+border-size=3
 icon=gtk-dialog-info
 
 [critical]
-border-color=fab387ff
+border-color=f38ba8ff
 default-timeout=0
 icon=gtk-dialog-warning
