--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -18,6 +18,9 @@ input "type:keyboard" {
 # Startup
 exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec xdg-user-dirs-gtk-update
+exec nm-applet
+exec blueman-applet
+exec udiskie --no-config --smart-tray --file-manager=pcmanfm
 exec autotiling
 exec /usr/share/sway-contrib/inactive-windows-transparency.py
 exec fnott
@@ -48,6 +51,7 @@ bindsym $mod+Return exec $term
 bindsym $mod+q kill
 bindsym $mod+Shift+Return exec $menu
 bindsym $mod+Shift+r reload
+bindsym $mod+Shift+b exec killall -SIGUSR2 waybar
 bindsym $mod+Shift+q exec fuzzel-power
 
 # Window manipulation
@@ -125,15 +129,19 @@ bindsym $mod+Ctrl+e workspace 3; exec pcmanfm
 bindsym $mod+period exec fuzzel-config
 bindsym $mod+Escape exec "foot --app-id btop btop"
 
+# Screenshots
+bindsym Print exec /usr/share/sway-contrib/grimshot savecopy output
+bindsym Shift+Print exec /usr/share/sway-contrib/grimshot savecopy area
+
 # Window rules
 for_window [app_id="btop"] floating enable, resize set 1200 800, move position center
 for_window [app_id=".*alculator"] floating enable
 #for_window [app_id="foot"] opacity 0.95
 
 # Start Yazi in scratchpad
-for_window [app_id="yazi"] border none, move scratchpad
+for_window [app_id="yazi"] move to scratchpad
 bindsym $mod+slash [app_id="yazi"] scratchpad show, resize set 1500 800, move position center
-exec "foot --app-id yazi bash -ic 'yazi'"
+exec "foot --app-id=yazi bash -ic 'yazi'"
 
 # Status Bar:
 bar {
