--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -27,8 +27,8 @@ exec ~/.local/bin/check_backup.sh
 
 ### Idle configuration
 exec swayidle -w \
-    timeout 30 'if pgrep swaylock; then swaymsg "output * power off"; fi' resume 'swaymsg "output * power on"' \
-    timeout 300 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
+    timeout 30 'if pgrep swaylock ; then swaymsg "output * power off"; fi' resume 'swaymsg "output * power on"' \
+    timeout 300 'if ! pgrep swaylock ; then swaylock -f; fi; swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
     before-sleep 'swaylock -f'
 
 # Sway options
