--- a/sway/.config/fuzzel/fuzzel.ini
+++ b/sway/.config/fuzzel/fuzzel.ini
@@ -1,10 +1,11 @@
 include=~/.config/fuzzel/catppuccin-mocha/lavender.ini
-font=JetBrainsMono Nerd Font:size=8
+font=JetBrainsMono Nerd Font
+dpi-aware=no
 use-bold=yes
 icon-theme=Papirus-Dark
 lines=10
 width=50
-line-height=20
+line-height=30
 
 [border]
 width=3
